@@ -33,6 +33,7 @@
 
 #include <fltk/file_chooser.h>
 #include <fltk/ProgressBar.h>
+#include <fltk/Output.h>
 #include <fltk/run.h>
 #include <fltk/ask.h>
 
@@ -493,10 +494,12 @@ void save_sequence_file( const mrv::ViewerUI* uiMain,
    fltk::ProgressBar* progress = NULL;
    fltk::Window* main = (fltk::Window*)uiMain->uiMain;
    fltk::Window* w = new fltk::Window( main->x(), main->y() + main->h()/2, 
-				       main->w(), 80 );
+				       main->w(), 120 );
    w->child_of(main);
    w->begin();
-   progress = new fltk::ProgressBar( 0, 20, w->w(), w->h()-20 );
+   fltk::Output* elapsed = new fltk::Output( 120, 80, 150, 20, "Elapsed" );
+   fltk::Output* remain = new fltk::Output( 350, 80, 150, 20, "Remaining" );
+   progress = new fltk::ProgressBar( 0, 20, w->w(), 40 );
    progress->range( 0, double(last - first + 1) );
    progress->align( fltk::ALIGN_TOP );
    char title[1024];
@@ -504,9 +507,13 @@ void save_sequence_file( const mrv::ViewerUI* uiMain,
 	    first, last );
    progress->label( title );
    progress->showtext(true);
+   w->resizable(progress);
    w->set_modal();
    w->end();
    
+   mrv::Timer timer;
+   timer.setDesiredFrameRate( 120.0 );
+
    fltk::check();
    
    int64_t dts = first;
@@ -516,6 +523,7 @@ void save_sequence_file( const mrv::ViewerUI* uiMain,
    const char* fileroot = root.c_str();
 
    mrv::media old;
+   double time = 0.0;
    bool open_movie = false;
    int movie_count = 1;
      
@@ -706,6 +714,28 @@ void save_sequence_file( const mrv::ViewerUI* uiMain,
       }
 
       progress->step(1);
+      timer.waitUntilNextFrameIsDue();
+      double now = timer.timeSinceLastFrame();
+      time += now;
+      int hour = floor( time / 3600.0 );
+      int min = int(floor( time / 60.0 )) % 60;
+      int sec = int(floor(time)) % 60;
+
+      char buf[120];
+      sprintf( buf, "%02d:%02d:%02d", hour, min, sec );
+
+      elapsed->value( buf );
+
+      double r = time / (double)frame;
+      r *= (last-frame);
+
+      hour = floor( r / 3600.0 );
+      min = int(floor( r / 60.0 )) % 60;
+      sec = int(floor( r )) % 60;
+
+      sprintf( buf, "%02d:%02d:%02d", hour, min, sec );
+      remain->value( buf );
+
       fltk::check();
 
       if ( !w->visible() ) {
